[gd_scene load_steps=11 format=3 uid="uid://dsteg3p8any0k"]

[ext_resource type="Script" path="res://talk_panel.gd" id="1_5hljw"]
[ext_resource type="Texture2D" uid="uid://cxl4vr603ucq6" path="res://assets/ldjam_fusee.png" id="1_8j5r8"]
[ext_resource type="FontFile" uid="uid://c3ouk7b6vaoxt" path="res://fonts/DiloWorld-mLJLv.ttf" id="2_0aqet"]
[ext_resource type="Texture2D" uid="uid://dkhqdydcgjmdn" path="res://assets/jack.png" id="3_ipa71"]
[ext_resource type="AudioStream" uid="uid://buqg5bmaems1r" path="res://music/VOIX JACQUES 2.mp3" id="4_ahkl5"]
[ext_resource type="AudioStream" uid="uid://bmhechelkdau" path="res://music/VOIX CORTANA 1.mp3" id="5_3xld0"]
[ext_resource type="AudioStream" uid="uid://6rdw36pi5c5k" path="res://music/VOIX CORTANA 2.mp3" id="6_8sljs"]
[ext_resource type="AudioStream" uid="uid://cdjqi1yp4a7oi" path="res://music/VOIX CORTANA 3.mp3" id="7_jyqr6"]
[ext_resource type="AudioStream" uid="uid://cuh37pbwopwdk" path="res://music/VOIX CORTANA 4.mp3" id="8_d6uvd"]
[ext_resource type="AudioStream" uid="uid://rtxtoq260x56" path="res://music/VOIX CORTANA 5.mp3" id="9_1x46v"]

[node name="TalkPanelRect" type="ColorRect"]
custom_minimum_size = Vector2(0, 220)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
color = Color(0, 0, 0, 1)
script = ExtResource("1_5hljw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = -532.0
offset_right = 1293.0
offset_bottom = 5.0
color = Color(0, 0, 0, 0.372549)

[node name="FuseeRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -614.0
offset_right = 431.0
offset_bottom = -220.0
grow_vertical = 0
rotation = -0.119782
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("1_8j5r8")
expand_mode = 1

[node name="JackRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -401.0
offset_top = -605.0
offset_right = -27.0
offset_bottom = -231.0
grow_horizontal = 0
grow_vertical = 0
rotation = 0.121938
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("3_ipa71")
expand_mode = 1
stretch_mode = 4

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -54.0
offset_top = -99.0
offset_right = 1328.0
offset_bottom = 232.0
color = Color(0.129412, 0.129412, 0.196078, 1)

[node name="Text" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(600, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -446.0
offset_top = -295.0
offset_right = 154.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.50956, 1.41199)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_0aqet")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="Text2" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_0aqet")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
justification_flags = 227

[node name="JackDitOkPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ahkl5")
volume_db = -10.0
parameters/looping = false

[node name="CortanaPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3xld0")

[node name="CortanaPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8sljs")

[node name="CortanaPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jyqr6")

[node name="CortanaPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_d6uvd")

[node name="CortanaPlayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1x46v")

[node name="PopFuseeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PopJackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="PopFuseeTimer" to="." method="_on_pop_fusee_timer_timeout"]
